@@ -1,40 +1,44 @@
-package com.projects.InvoiceManagementSystem.Service.Implementions;
+package com.projects.InvoiceManagementSystem.service.implementions;
 
-import com.projects.InvoiceManagementSystem.DTO.InvoiceItemDTO;
-import com.projects.InvoiceManagementSystem.Entities.Invoice;
-import com.projects.InvoiceManagementSystem.Entities.InvoiceItem;
-import com.projects.InvoiceManagementSystem.Entities.UserDetail;
-import com.projects.InvoiceManagementSystem.Repository.InvoiceItemRepository;
-import com.projects.InvoiceManagementSystem.Service.InvoiceItemService;
+import com.projects.InvoiceManagementSystem.dto.InvoiceItemDto;
+import com.projects.InvoiceManagementSystem.entitiy.Invoice;
+import com.projects.InvoiceManagementSystem.entitiy.InvoiceItem;
+import com.projects.InvoiceManagementSystem.entitiy.UserDetail;
+import com.projects.InvoiceManagementSystem.repository.InvoiceItemRepository;
+import com.projects.InvoiceManagementSystem.service.InvoiceItemService;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
+@Slf4j
 public class InvoiceItemServiceImplementation implements InvoiceItemService {
     private final InvoiceItemRepository invoiceItemRepository;
 
     @Override
-    public List<InvoiceItemDTO> getAllInvoiceItems() {
+    public List<InvoiceItemDto> getAllInvoiceItems() {
         return invoiceItemRepository.findAll().stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList()
     }
 
     @Override
-    public InvoiceItemDTO getInvoiceItemById(UUID invoiceItemId) {
+    public InvoiceItemDto getInvoiceItemById(UUID invoiceItemId) {
         return invoiceItemRepository.findById(invoiceItemId)
                 .map(this::convertToDTO)
                 .orElseThrow(() -> new RuntimeException("Invoice item not found"));
     }
 
     @Override
-    public InvoiceItemDTO createInvoiceItem(InvoiceItemDTO invoiceItemDTO) {
+    public InvoiceItemDto createInvoiceItem(InvoiceItemDto invoiceItemDTO) {
+
+        log.info("Invoice item created {}", invoiceItemDTO);
+
         InvoiceItem invoiceItem = new InvoiceItem();
         UserDetail userDetail = new UserDetail();
         userDetail.setUserId(invoiceItemDTO.getCreatedBy());
@@ -45,16 +49,22 @@ public class InvoiceItemServiceImplementation implements InvoiceItemService {
         invoiceItem.setCreatedOn(LocalDateTime.now());
         invoiceItem.setCreatedBy(userDetail);
         invoiceItemRepository.save(invoiceItem);
+        log.info(convertToDTO(invoiceItem).toString());
         return convertToDTO(invoiceItem);
     }
 
     @Override
-    public InvoiceItemDTO updateInvoiceItem(UUID invoiceItemId, InvoiceItemDTO invoiceItemDTO) {
+    public InvoiceItemDto updateInvoiceItem(UUID invoiceItemId, InvoiceItemDto invoiceItemDTO) {
+
+        log.info("Invoice item updated {}", invoiceItemDTO);
+
         InvoiceItem invoiceItem = invoiceItemRepository.findById(invoiceItemId)
                 .orElseThrow(() -> new RuntimeException("Invoice item not found"));
         invoiceItem.setItemName(invoiceItemDTO.getItemName());
         invoiceItem.setItemDescription(invoiceItemDTO.getItemDescription());
         invoiceItemRepository.save(invoiceItem);
+
+        log.info(convertToDTO(invoiceItem).toString());
         return convertToDTO(invoiceItem);
     }
 
@@ -63,8 +73,8 @@ public class InvoiceItemServiceImplementation implements InvoiceItemService {
         invoiceItemRepository.deleteById(invoiceItemId);
     }
 
-    private InvoiceItemDTO convertToDTO(InvoiceItem invoiceItem) {
-        InvoiceItemDTO dto = new InvoiceItemDTO();
+    private InvoiceItemDto convertToDTO(InvoiceItem invoiceItem) {
+        InvoiceItemDto dto = new InvoiceItemDto();
         dto.setInvoiceItemId(invoiceItem.getInvoiceItemId());
         dto.setInvoiceId(invoiceItem.getInvoice().getInvoiceId());
         dto.setItemName(invoiceItem.getItemName());
